fixed table spacing and found a color scheme I liked

--- a/style.css
+++ b/style.css
@@ -4,36 +4,100 @@ body, h1, h2 {
   font-family: 'Francois One', sans-serif;
 }
 
+body {
+  background-color: #3A5683;
+}
+
+.container {
+  max-width: 900px;
+  background-color: #76B041;
+  color: #111;
+  margin: 0 auto;
+}
+
 header {
-  background-color: green;
+  background-color:;
+  height: 100px;
+  border-style: none none solid none;
+  border-bottom-width: 2px;
+  border-bottom-color: #333;
+  position: relative;
+}
+
+header h1 {
+  float: left;
+  position: absolute;
+  bottom: 0;
+  margin-left: 10px;
+}
+
+#inputSection {
+  float: left;
+  height: 100px;
+  width: 55%;
+}
+
+#inputSection > div {
+  padding: 10px;
+}
+
+#employeeInfoSection {
+  clear: both;
+}
+
+#employeeInfoSection > div {
+  padding: 10px;
+}
+
+#employeeTable {
+  width: 100%;
+  border-spacing: 0;
+  table-layout: fixed;
+}
+
+th {
+  text-align: left;
+  border-bottom: solid 1px #333;
+}
+
+#employeeTable th:nth-child(1) {
+  width: 30%;
+}
+
+#employeeTable th:nth-child(2) {
+  width: 15%;
+}
+
+#employeeTable th:nth-child(3) {
+  width: 25%;
+}
+
+#employeeTable th:nth-child(4) {
+  width: 20%;
+}
+#employeeTable th:nth-child(5) {
+  width: 7%;
+  border-bottom: none;
+}
+
+#employeeTableBody tr:nth-child(even){
+  background-color: #76B041
+}
+
+#employeeTableBody tr:nth-child(even){
+  background-color: #639A88
+}
+
+
+#monthlyExpensesSection {
+  float: right;
   height: 100px;
   display: flex;
+  width: 45%;
   justify-content: center;
   align-items: center;
 }
 
-#inputSection {
-  background-color: pink;
-}
-
-#employeeInfoSection {
-  background-color: teal;
-}
-
-#employeeInfoSection {
-  background-color: lavender;
-}
-
-#monthlyExpensesSection {
-  background-color: yellow;
-}
-
-.salaryField {
-  filter: blur(5px);
-  transition: 200ms;
-}
-
-.salaryField:hover {
-  filter: none;
-  transition: 200ms;
+#monthlyExpensesSection h2 {
+  align-content: center;
 }
